12/3/13 when a diluted solution reads '7.00' on the pH meter, use water color
12/3/13 internal refactoring of Solution model, moved some functions to prototype, made color derived from solute and pH
12/3/13 change font on volume indicator to be same size as tick labels on the beaker
11/27/13 use 'water' instead of 'solvent' throughout, since our model only makes sense for water and we don't need to support other solvents
11/27/13 adjust touchArea of dropper so that it doesn't interfere with solute combo box
11/27/13 expand touchArea for expand/collapse buttons
11/27/13 expand touchArea for check boxes
11/27/13 review and cleanup of all code
11/27/13 move toTimesTenString to PHUtils
11/27/13 use fixed exponent of 25 for H2O molecule count, use 2 decimal places instead of 1
11/27/13 rename ChoiceSwitch to ABSwitch
11/27/13 make OnOffSwitch behave identically to iOS UISwitch
11/27/13 add enums for graph type and units
11/27/13 move PHMeter to basics.model
11/27/13 don't use PHMeter model element in 'Solutions' and 'Custom' screens
11/27/13 generalize OnOffSwitch and ChoiceSwitch
11/27/13 implement the iOS-like switch for the graph options
# 1.0.0-dev.1 11/26/13
11/26/13 add placeholder for 'ratio' feature
11/26/13 use CSS to color-code the 'H3O+/OH- ratio' label
11/26/13 make exponents smaller using CSS in 'Molecule count' view
11/26/13 add 'Molecule count' view
11/26/13 add color-coding to 'H3O+/OH- ratio' label
11/26/13 fix colors, sample using sRBG
11/26/13 adjust colors of atoms
11/26/13 nodes for atoms and molecules
11/26/13 change order of beaker controls
11/25/13 Solutions: make beaker slightly shorter to accommodate control panel below beaker
11/25/13 add beaker controls to 'Solutions' screen
11/25/13 add graph placeholder to 'Custom' screen
11/25/13 revert to using same color for drain cleaner and battery acid, this was intentional
11/25/13 Basics: make 'milk' the initial solute
11/25/13 use smaller default font for title(s) on ExpandCollapseBar