@@ -11,6 +11,7 @@ define( function( require ) {
   // imports
   var Color = require( 'SCENERY/util/Color' );
   var Property = require( 'AXON/Property' );
+  var Water = require( 'PH_SCALE/common/model/Water' );
 
   // strings
   var drainCleanerString = require( 'string!PH_SCALE/choice.drainCleaner' );
@@ -39,17 +40,17 @@ define( function( require ) {
     this.dilutedColor = dilutedColor;
   }
 
-  Solute.DRAIN_CLEANER = new Solute( drainCleanerString, 13, new Color( 255, 255, 0 ), new Color( 255, 255, 230 ) );
-  Solute.HAND_SOAP = new Solute( handSoapString, 10, new Color( 204, 0, 204 ), new Color( 255, 245, 255 ) );
-  Solute.BLOOD = new Solute( bloodString, 7.4, new Color( 185, 12, 0 ), new Color( 255, 240, 250 ) );
-  Solute.SPIT = new Solute( spitString, 7.4, new Color( 200, 230, 230 ), new Color( 215, 245, 245 ) );
-  Solute.MILK = new Solute( milkString, 6.5, new Color( 250, 250, 250 ), new Color( 235, 255, 240 ) );
-  Solute.COFFEE = new Solute( coffeeString, 5.0, new Color( 164, 99, 7 ), new Color( 255, 252, 243 ) );
-  Solute.BEER = new Solute( beerString, 4.5, new Color( 255, 200, 0 ), new Color( 255, 255, 248 ) );
-  Solute.LIME_SODA = new Solute( sodaString, 2.5, new Color( 204, 255, 102 ), new Color( 236, 255, 246 ) );
-  Solute.VOMIT = new Solute( vomitString, 2, new Color( 255, 171, 120 ), new Color( 255, 250, 242 ) );
-  Solute.BATTERY_ACID = new Solute( batteryAcidString, 1, new Color( 255, 255, 0 ), new Color( 255, 255, 230 ) );
-  Solute.CUSTOM = new Solute( customString, 7, new Color( 251, 236, 150 ), new Color( 255, 255, 245 ) );
+  Solute.DRAIN_CLEANER = new Solute( drainCleanerString, 13, new Color( 255, 255, 0 ), Water.color );
+  Solute.HAND_SOAP = new Solute( handSoapString, 10, new Color( 204, 0, 204 ), Water.color );
+  Solute.BLOOD = new Solute( bloodString, 7.4, new Color( 185, 12, 0 ), Water.color );
+  Solute.SPIT = new Solute( spitString, 7.4, new Color( 202, 240, 239 ), Water.color );
+  Solute.MILK = new Solute( milkString, 6.5, new Color( 250, 250, 250 ), Water.color );
+  Solute.COFFEE = new Solute( coffeeString, 5.0, new Color( 164, 99, 7 ), Water.color );
+  Solute.BEER = new Solute( beerString, 4.5, new Color( 255, 200, 0 ), Water.color );
+  Solute.LIME_SODA = new Solute( sodaString, 2.5, new Color( 204, 255, 102 ), Water.color );
+  Solute.VOMIT = new Solute( vomitString, 2, new Color( 255, 171, 120 ), Water.color );
+  Solute.BATTERY_ACID = new Solute( batteryAcidString, 1, new Color( 255, 255, 0 ), Water.color );
+  Solute.CUSTOM = new Solute( customString, 7, new Color( 251, 236, 150 ), Water.color );
 
   return Solute;
 } );
