@@ -1,3 +1,5 @@
+12/3/13 use water color as the 'diluted' color for all solutions, as shown in the design doc
+12/3/13 change colors of milk and spit, as shown in the design doc
 12/3/13 when a diluted solution reads '7.00' on the pH meter, use water color
 12/3/13 internal refactoring of Solution model, moved some functions to prototype, made color derived from solute and pH
 12/3/13 change font on volume indicator to be same size as tick labels on the beaker
